Implement REST interface
This implements the rest inferface by

- Defining a Postgrsql data schems
- Adding golang-migrate for migrations
- Adding magefile targets to roll migrations forward and back
- Adding database configuration
- Adding read and write repositories
- Implementing the REST handlers
- Adding domain specific types for the account service in the domain
  layer
